design: 로그인 페이지 소셜 로그인 버튼 배경색 오류 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,3 +22,19 @@ body {
   height: 100vh;
   overflow-x: hidden;
 }
+
+.google-btn-color {
+  background-color: #d9483b;
+}
+
+.google-btn-color:hover {
+  background-color: #ba3e32;
+}
+
+.github-btn-color {
+  background-color: black;
+}
+
+.github-btn-color:hover {
+  background-color: rgb(17 24 39);
+}
